--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #000a17">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kayse-og.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kayse AI | Client Retention Platform for Law Firms</title>
-    <meta name="description" content="Kayse is the AI Client Retention Platform built for high-volume law firms. Reduce client churn, improve service, and grow your firm without adding staff.">
+    <meta
+      name="description"
+      content="Kayse is the AI Client Retention Platform built for high-volume law firms. Reduce client churn, improve service, and grow your firm without adding staff."
+    />
   </head>
-  <body>
+  <body style="background-color: #000a17">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
